--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,44 @@
+@import url('https://fonts.googleapis.com/css?family=Mali');
+
 .App {
   text-align: center;
-  background-color: #66b2b2;
+  background-color:#FFFFFF;
+  font-family: 'Mali', cursive;
+
+}
+
+.header
+{ height:220px;
+  width:100%;
+  margin:0 auto;
+}
+.headerLeft
+{width:1%;
+ background-image:url(./styles/wrapper-bg.jpg);
+ background-repeat:no-repeat;
+ height:216px;
+ float:left;
+ margin:0 auto;
+
+
+} 
+.headerMid
+{
+ width:98%;
+ background-image: url(./styles/wrapper-bg-mid.jpg);
+ height:216px;
+ float:left;
+ background-repeat:repeat-x;
+ margin:0 auto;
+
+}
+.headerRight
+{width:1%;
+ background-image: url(./styles/wrapper-bg-right.jpg);
+ background-repeat:no-repeat;
+ height:216px;
+ float:right;
+ margin:0 auto;
 }
 
 .App-logo {
