--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Spicy+Rice');
+
 .button {
     margin: 10px;
     display: inline-block;
@@ -11,9 +13,10 @@
     background: -moz-linear-gradient(top, #75e1bd, #488a74);
     background: linear-gradient(to bottom, #75e1bd, #488a74);
     text-shadow: #2d5749 1px 1px 1px;
-    font: normal normal bold 20px arial;
+    font: normal normal 20px arial;
     color: #ffffff;
     text-decoration: none;
+    font-family: 'Spicy Rice', cursive;
 }
 .button:hover,
 .button:focus {
@@ -42,4 +45,9 @@
     top: 0px;
     left: 0px;
    background-size: 100% 100%;
+}
+
+.tags {
+    border: 3px ridge teal;
+    padding: 8px;
 }
