--- a/src/styles/game-best-tags.css
+++ b/src/styles/game-best-tags.css
@@ -13,7 +13,9 @@
 
 .gameBox {
     background-image: url('https://img1.picmix.com/output/stamp/normal/6/8/4/4/264486_cc7d0.png');
-    background-size: 100%;
+    /* background-size: 100%; */
+    background-size: contain;
+    background-repeat: no-repeat;
     /* border: 3px ridge teal; */
     padding: 8px;
 }
