--- a/src/styles/game-best-tags.css
+++ b/src/styles/game-best-tags.css
@@ -6,16 +6,17 @@
 }
 
 .tags{
-    /* padding: 6px; */
+    padding: 6px;
     display: inline;
     text-align: left;
 }
 
+
 .gameBox {
-    background-image: url('https://img1.picmix.com/output/stamp/normal/6/8/4/4/264486_cc7d0.png');
-    /* background-size: 100%; */
-    background-size: contain;
+    /* background-image: url('https://img1.picmix.com/output/stamp/normal/6/8/4/4/264486_cc7d0.png'); */
+    background-size: 100%;
+    /* background-size: contain; */
     background-repeat: no-repeat;
-    /* border: 3px ridge teal; */
+margin: 60px;
     padding: 8px;
 }
